whereq/whereq-toolkit/json-schemavalidator/src/main/java/com/whereq/common/json/schema/expression/ConstraintExprParser.java
// Generated from com\whereq\common\json\schema\expression\ConstraintExpr.g4 by ANTLR 4.3
package com.whereq.common.json.schema.expression;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ConstraintExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__21=1, T__20=2, T__19=3, T__18=4, T__17=5, T__16=6, T__15=7, T__14=8, 
		T__13=9, T__12=10, T__11=11, T__10=12, T__9=13, T__8=14, T__7=15, T__6=16, 
		T__5=17, T__4=18, T__3=19, T__2=20, T__1=21, T__0=22, IN_OPERATOR=23, 
		BOOLEAN=24, IDENT=25, INTEGER=26, FLOAT=27, STRING=28, WS=29;
	public static final String[] tokenNames = {
		"<INVALID>", "'/'", "'!='", "':'", "'['", "'>='", "'||'", "'<'", "'=='", 
		"'&&'", "']'", "'>'", "'?'", "'!'", "'<='", "'#'", "'('", "')'", "'*'", 
		"'+'", "','", "'-'", "'.'", "'in'", "BOOLEAN", "IDENT", "INTEGER", "FLOAT", 
		"STRING", "WS"
	};
	public static final int
		RULE_constraint_expression = 0, RULE_expression = 1, RULE_cond = 2, RULE_or = 3, 
		RULE_and = 4, RULE_equal = 5, RULE_relation = 6, RULE_add = 7, RULE_mult = 8, 
		RULE_unary = 9, RULE_term = 10, RULE_array = 11, RULE_function = 12, RULE_arguments = 13, 
		RULE_datapath = 14, RULE_datapath_element = 15, RULE_optionpath = 16;
	public static final String[] ruleNames = {
		"constraint_expression", "expression", "cond", "or", "and", "equal", "relation", 
		"add", "mult", "unary", "term", "array", "function", "arguments", "datapath", 
		"datapath_element", "optionpath"
	};

	@Override
	public String getGrammarFileName() { return "ConstraintExpr.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ConstraintExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class Constraint_expressionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Constraint_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraint_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterConstraint_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitConstraint_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitConstraint_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Constraint_expressionContext constraint_expression() throws RecognitionException {
		Constraint_expressionContext _localctx = new Constraint_expressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_constraint_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(34); expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36); cond();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
	 
		public CondContext() { }
		public void copyFrom(CondContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class TenaryRuleContext extends CondContext {
		public OrContext or(int i) {
			return getRuleContext(OrContext.class,i);
		}
		public List<OrContext> or() {
			return getRuleContexts(OrContext.class);
		}
		public TenaryRuleContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterTenaryRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitTenaryRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitTenaryRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class CondPassthroughContext extends CondContext {
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public CondPassthroughContext(CondContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterCondPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitCondPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitCondPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cond);
		try {
			setState(45);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				_localctx = new CondPassthroughContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(38); or();
				}
				break;

			case 2:
				_localctx = new TenaryRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(39); or();
				setState(40); match(T__10);
				setState(41); or();
				setState(42); match(T__19);
				setState(43); or();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrContext extends ParserRuleContext {
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
	 
		public OrContext() { }
		public void copyFrom(OrContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class OrPassthroughContext extends OrContext {
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public OrPassthroughContext(OrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterOrPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitOrPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitOrPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class OrRuleContext extends OrContext {
		public AndContext and(int i) {
			return getRuleContext(AndContext.class,i);
		}
		public List<AndContext> and() {
			return getRuleContexts(AndContext.class);
		}
		public OrRuleContext(OrContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterOrRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitOrRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitOrRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_or);
		int _la;
		try {
			setState(55);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				_localctx = new OrPassthroughContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47); and();
				}
				break;

			case 2:
				_localctx = new OrRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(48); and();
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(49); match(T__16);
					setState(50); and();
					}
					}
					setState(53); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__16 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndContext extends ParserRuleContext {
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
	 
		public AndContext() { }
		public void copyFrom(AndContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AndRuleContext extends AndContext {
		public List<EqualContext> equal() {
			return getRuleContexts(EqualContext.class);
		}
		public EqualContext equal(int i) {
			return getRuleContext(EqualContext.class,i);
		}
		public AndRuleContext(AndContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterAndRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitAndRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitAndRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AndPassthroughContext extends AndContext {
		public EqualContext equal() {
			return getRuleContext(EqualContext.class,0);
		}
		public AndPassthroughContext(AndContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterAndPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitAndPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitAndPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_and);
		int _la;
		try {
			setState(65);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				_localctx = new AndPassthroughContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(57); equal();
				}
				break;

			case 2:
				_localctx = new AndRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(58); equal();
				setState(61); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(59); match(T__13);
					setState(60); equal();
					}
					}
					setState(63); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__13 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqualContext extends ParserRuleContext {
		public EqualContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_equal; }
	 
		public EqualContext() { }
		public void copyFrom(EqualContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class EqualPassthroughContext extends EqualContext {
		public RelationContext relation() {
			return getRuleContext(RelationContext.class,0);
		}
		public EqualPassthroughContext(EqualContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterEqualPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitEqualPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitEqualPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class EqualRuleContext extends EqualContext {
		public List<RelationContext> relation() {
			return getRuleContexts(RelationContext.class);
		}
		public RelationContext relation(int i) {
			return getRuleContext(RelationContext.class,i);
		}
		public EqualRuleContext(EqualContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterEqualRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitEqualRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitEqualRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqualContext equal() throws RecognitionException {
		EqualContext _localctx = new EqualContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_equal);
		int _la;
		try {
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				_localctx = new EqualPassthroughContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(67); relation();
				}
				break;

			case 2:
				_localctx = new EqualRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(68); relation();
				setState(69);
				_la = _input.LA(1);
				if ( !(_la==T__20 || _la==T__14) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(70); relation();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RelationContext extends ParserRuleContext {
		public RelationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relation; }
	 
		public RelationContext() { }
		public void copyFrom(RelationContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class InRuleContext extends RelationContext {
		public TerminalNode IN_OPERATOR() { return getToken(ConstraintExprParser.IN_OPERATOR, 0); }
		public ArrayContext array() {
			return getRuleContext(ArrayContext.class,0);
		}
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public InRuleContext(RelationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterInRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitInRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitInRule(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class RelationPassthroughContext extends RelationContext {
		public AddContext add() {
			return getRuleContext(AddContext.class,0);
		}
		public RelationPassthroughContext(RelationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterRelationPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitRelationPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitRelationPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ComparisonRuleContext extends RelationContext {
		public AddContext add(int i) {
			return getRuleContext(AddContext.class,i);
		}
		public List<AddContext> add() {
			return getRuleContexts(AddContext.class);
		}
		public ComparisonRuleContext(RelationContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterComparisonRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitComparisonRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitComparisonRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RelationContext relation() throws RecognitionException {
		RelationContext _localctx = new RelationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_relation);
		int _la;
		try {
			setState(83);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				_localctx = new RelationPassthroughContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(74); add();
				}
				break;

			case 2:
				_localctx = new ComparisonRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(75); add();
				setState(76);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__17) | (1L << T__15) | (1L << T__11) | (1L << T__8))) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				setState(77); add();
				}
				break;

			case 3:
				_localctx = new InRuleContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79); add();
				setState(80); match(IN_OPERATOR);
				setState(81); array();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddContext extends ParserRuleContext {
		public AddContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_add; }
	 
		public AddContext() { }
		public void copyFrom(AddContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AddPassthroughContext extends AddContext {
		public MultContext mult() {
			return getRuleContext(MultContext.class,0);
		}
		public AddPassthroughContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterAddPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitAddPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitAddPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AddRuleContext extends AddContext {
		public List<MultContext> mult() {
			return getRuleContexts(MultContext.class);
		}
		public MultContext mult(int i) {
			return getRuleContext(MultContext.class,i);
		}
		public AddRuleContext(AddContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterAddRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitAddRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitAddRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddContext add() throws RecognitionException {
		AddContext _localctx = new AddContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_add);
		int _la;
		try {
			setState(93);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new AddPassthroughContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(85); mult();
				}
				break;

			case 2:
				_localctx = new AddRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(86); mult();
				setState(89); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(87);
					_la = _input.LA(1);
					if ( !(_la==T__3 || _la==T__1) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(88); mult();
					}
					}
					setState(91); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__3 || _la==T__1 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultContext extends ParserRuleContext {
		public MultContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_mult; }
	 
		public MultContext() { }
		public void copyFrom(MultContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MultPassthroughContext extends MultContext {
		public UnaryContext unary() {
			return getRuleContext(UnaryContext.class,0);
		}
		public MultPassthroughContext(MultContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterMultPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitMultPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitMultPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MultRuleContext extends MultContext {
		public List<UnaryContext> unary() {
			return getRuleContexts(UnaryContext.class);
		}
		public UnaryContext unary(int i) {
			return getRuleContext(UnaryContext.class,i);
		}
		public MultRuleContext(MultContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterMultRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitMultRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitMultRule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultContext mult() throws RecognitionException {
		MultContext _localctx = new MultContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_mult);
		int _la;
		try {
			setState(103);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				_localctx = new MultPassthroughContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(95); unary();
				}
				break;

			case 2:
				_localctx = new MultRuleContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96); unary();
				setState(99); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(97);
					_la = _input.LA(1);
					if ( !(_la==T__21 || _la==T__4) ) {
					_errHandler.recoverInline(this);
					}
					consume();
					setState(98); unary();
					}
					}
					setState(101); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==T__21 || _la==T__4 );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnaryContext extends ParserRuleContext {
		public UnaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary; }
	 
		public UnaryContext() { }
		public void copyFrom(UnaryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class UnaryPassthroughContext extends UnaryContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public UnaryPassthroughContext(UnaryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterUnaryPassthrough(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitUnaryPassthrough(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitUnaryPassthrough(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class UnaryRuleContext extends UnaryContext {
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public UnaryRuleContext(UnaryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).enterUnaryRule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof ConstraintExprListener ) ((ConstraintExprListener)listener).exitUnaryRule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof ConstraintExprVisitor ) return ((ConstraintExprVisitor<? extends T>)visitor).visitUnaryRule(this);
			else return visitor.visitChildren(this);
		}
	}
